--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 // app
-$theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
+$theme-gradient: linear-gradient(72deg, #f68657, #fffff3);
 $top-header-text-color: #fff;
 
 /**
@@ -9,11 +9,11 @@ $top-header-text-color: #fff;
 // body
 $light-background-color: #fff;
 $light-text-shadow: 0 0 0.1px rgba(0, 0, 0, 0.3);
-$light-hover-text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+$light-hover-text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 
 // index
 $dimmed-color: #eef5db;
-$light-link-color: #000080;
+$light-link-color: #f68657;
 $dark-gray: #333;
 $middle-gray: #7d7d7d;
 $light-gray: #aaa;
@@ -28,7 +28,7 @@ $inline-dimmed-color: #ece5f1;
 $inline-text-color: #4b2043;
 
 // category
-$light-category-border-color: #ecf0f2;
+$light-category-border-color: #e0e3da;
 $light-category-highlight-border-color: #909da1;
 $light-category-background-color: #f4f7f8;
 $light-category-text-color: #666;
@@ -39,14 +39,14 @@ $light-category-item-color: #fff;
  * @dark theme
  */
 $dark-background-color: #282c35;
-$dark-link-color: #bb72ec;
+$dark-link-color: #f68657;
 
 $dark-lightest-font-color: #fff;
 $dark-light-font-color: #eeeeee;
 $dark-middle-font-color: #d8d7d7;
 
 $dark-text-shadow: 0 0 0.1px rgba(255, 255, 255, 0.3);
-$dark-hover-text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
+$dark-hover-text-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
 
 $dark-category-item-color: #282c35;
 $dark-category-background-color: #24272c;
